handle verify mbtt number
